--- a/html/index2.html
+++ b/html/index2.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nos Services - BE LOYAL IT</title>
     <link rel="stylesheet" href="../css/index2.css">
     <link rel="stylesheet" href="../css/nav.css">
-
-    <nav>
-        <img src="../img/logo/119143389_4389718227736092_5767319527882787500_n.png" alt="">
-        <li>
-            <ul><a href="">Accueil</a></ul>
-            <ul><a href="./index2.html">Service</a></ul>
-            <ul><a href="">Realisation</a></ul>
-            <ul><a href="">A propos</a></ul>
-            <ul><a href="../html/index4.html">Contact</a></ul>
-        </li>
-    </nav>
 </head>
 
 <body>
+    <nav>
+        <img src="../img/logo/119143389_4389718227736092_5767319527882787500_n.png" alt="BE LOYAL IT Logo">
+        <ul>
+            <li><a href="./index.html">Accueil</a></li>
+            <li><a href="./index2.html">Service</a></li>
+            <li><a href="./index4.html">Réalisation</a></li>
+            <!-- <li><a href="">A propos</a></li> -->
+            <li><a href="./index3.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <main>
         <div class="intro">
             <h1>Nos services</h1>
@@ -28,6 +28,7 @@
                 solutions IT et télécoms.
                 Nos services sont conçus pour garantir performance,
                 sécurité et continuité des activités</h2>
+             <button class="btn btn2">Nous contacter</button>
         </div>
         <section class="container">
             <div class="cont">
@@ -55,6 +56,7 @@
                 </div>
             </div>
             <div class="cont">
+                <img src="../img/telecom.jpg" alt="">
                 <div class="details">
                     <section class="details1">
                         <h2>Développement d’applications Telecom (VAS)</h2>
@@ -76,7 +78,6 @@
                         <p>garantir une infrastructure fiable, performante et sécurisée.</p>
                     </section>
                 </div>
-                <img src="../img/telecom.jpg" alt="">
             </div>
             <div class="cont">
                 <img src="../img/serveur.jpg" alt="">
@@ -103,6 +104,7 @@
                 </div>
             </div>
             <div class="cont">
+                <img src="../img/telephone.jpg" alt="">
                 <div class="details">
                     <section class="details1">
                         <h2>Téléphonie professionnelle (PABX / IPBX)</h2>
@@ -124,7 +126,6 @@
                         <p>optimiser la communication professionnelle et la collaboration.</p>
                     </section>
                 </div>
-                <img src="../img/telephone.jpg" alt="">
             </div>
             <div class="cont">
                 <img src="../img/business.jpg" alt="">
@@ -151,6 +152,7 @@
                 </div>
             </div>
             <div class="cont">
+                <img src="../img/evenement.jpg" alt="">
                 <div class="details">
                     <section class="details1">
                         <h2>Événementiel professionnel & audiovisuel</h2>
@@ -172,21 +174,43 @@
                         <p>garantir des événements réussis et de qualité.</p>
                     </section>
                 </div>
-                <img src="../img/evenement.jpg" alt="">
             </div>
         </section>
-        <div class="attirer">
-            <div>
-                <h1>Découvrez ce que la technologie </h1>
+        <section class="attirer">
+            <div class="attirer-content">
+                <h1>Découvrez ce que la technologie</h1>
                 <h1>dit de votre entreprise</h1>
             </div>
-            <div>
-                <button class="btn btn1">Nos service</button>
-                <button class="btn btn2">contacter nous</button>
+            <div class="attirer-buttons">
+                <button class="btn btn1">Nos services</button>
+                <button class="btn btn2">Nous contacter</button>
             </div>
-        </div>
+        </section>
     </main>
 
+    <footer>
+        <div class="footer-content">
+            <div class="footer-info">
+                <h3>Be Loyal IT</h3>
+                <p>Votre partenaire IT pour des solutions fiables et innovantes.</p>
+                <img src="../img/logo/119143389_4389718227736092_5767319527882787500_n.png" alt="Logo">
+            </div>
+            <div class="footer-info">
+                <h3>Navigation</h3>
+                <p><a href="./index.html">Accueil</a></p>
+                <p><a href="./index2.html">Services</a></p>
+                <p><a href="./index4.html">Réalisations</a></p>
+                <p><a href="./index3.html">Contact</a></p>
+            </div>
+            <div class="footer-info">
+                <h3>Adresse</h3>
+                <p>Lot III P 20 Ge Marohoho</p>
+                <p>Tsimbazaza</p>
+                <p>Antananarivo 101</p>
+                <p>MADAGASCAR</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
