--- a/html/index.html
+++ b/html/index.html
@@ -1,57 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BE LOYAL IT</title>
+    <title>BE LOYAL IT - Solutions IT et Télécoms</title>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/nav.css">
-    <nav>
-        <img src="../img/logo/119143389_4389718227736092_5767319527882787500_n.png" alt="">
-        <li>
-            <ul><a href="">Accueil</a></ul>
-            <ul><a href="./index2.html">Service</a></ul>
-            <ul><a href="">Realisation</a></ul>
-            <ul><a href="">A propos</a></ul>
-            <ul><a href="../html/index4.html">Contact</a></ul>
-        </li>
-    </nav>
 </head>
 
 <body>
+    <nav>
+        <img src="../img/logo/119143389_4389718227736092_5767319527882787500_n.png" alt="BE LOYAL IT Logo">
+        <ul>
+            <li><a href="./index.html">Accueil</a></li>
+            <li><a href="./index2.html">Service</a></li>
+            <li><a href="./index4.html">Réalisation</a></li>
+            <!-- <li><a href="">A propos</a></li> -->
+            <li><a href="./index3.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <main>
-        <div class="txt">  
-            <h1>Be Loyal IT accompagne les entreprises avec des solutions IT et télécoms performantes.</h1>
-            <h5>Nous concevons et maintenons des solutions numériques adaptées à vos besoins métiers.</h5>
-        </div>
-        <div class="cont">
-            <button class="btn btn1">Nos service</button>
-            <button class="btn btn2">Contacter nous</button>
-        </div>
-        <img src="../img/robot.png" alt="" class="mainImg">
-        <div class="service">
+        <section class="hero">
+            <div class="txt">  
+                <h1>Be Loyal IT accompagne les entreprises avec des solutions IT et télécoms performantes.</h1>
+                <h5>Nous concevons et maintenons des solutions numériques adaptées à vos besoins métiers.</h5>
+            </div>
+            <div class="cont">
+                <button class="btn btn1">Nos services</button>
+                <button class="btn btn2">Nous contacter</button>
+            </div>
+            <img src="../img/robot.png" alt="Robot illustration" class="mainImg">
+        </section>
+
+        <section class="service">
             <div class="servicetxt">
-                <img src="../img/infrastructure.jpg" alt="">
-                <h2>Infrastructures IT & Réseaux</h2>
+                <div class="service-card">
+                    <img src="../img/infrastructure.jpg" alt="Infrastructure IT">
+                    <h2>Infrastructures IT & Réseaux</h2>
+                </div>
             </div>
             <div class="servicetxt">
-                <img src="../img/support.jpg" alt="">
-                <h2>Support & Maintenance IT</h2>
+                <div class="service-card">
+                    <img src="../img/support.jpg" alt="Support IT">
+                    <h2>Support & Maintenance IT</h2>
+                </div>
             </div>
             <div class="servicetxt">
-                <img src="../img/telecom.jpg" alt="">
-                <h2>Télécom & Communication</h2>
+                <div class="service-card">
+                    <img src="../img/telecom.jpg" alt="Télécom">
+                    <h2>Télécom & Communication</h2>
+                </div>
             </div>
-            <span>
+            <div class="service-info">
                 <h2>Des services adaptés aux besoins des entreprises modernes</h2>
                 <p>Nous proposons des services IT et télécoms conçus pour répondre aux besoins des entreprises.</p>
-                <button class="btn">Plus</button>
-            </span>
-        </div>
+                <button class="btn btn-primary">En savoir plus</button>
+            </div>
+        </section>
     </main>
-    <footer>
 
+    <footer>
+        <div class="footer-content">
+            <div class="footer-info">
+                <h3>Be Loyal IT</h3>
+                <p>Votre partenaire IT pour des solutions fiables et innovantes.</p>
+                <img src="../img/logo/119143389_4389718227736092_5767319527882787500_n.png" alt="Logo">
+            </div>
+            <div class="footer-info">
+                <h3>Navigation</h3>
+                <p><a href="./index.html">Accueil</a></p>
+                <p><a href="./index2.html">Services</a></p>
+                <p><a href="./index4.html">Réalisations</a></p>
+                <p><a href="./index3.html">Contact</a></p>
+            </div>
+            <div class="footer-info">
+                <h3>Adresse</h3>
+                <p>Lot III P 20 Ge Marohoho</p>
+                <p>Tsimbazaza</p>
+                <p>Antananarivo 101</p>
+                <p>MADAGASCAR</p>
+            </div>
+        </div>
     </footer>
 </body>
 
