--- a/html/index.html
+++ b/html/index.html
@@ -28,8 +28,14 @@
                 <h5>Nous concevons et maintenons des solutions numériques adaptées à vos besoins métiers.</h5>
             </div>
             <div class="cont">
-                <button class="btn btn1">Nos services</button>
-                <button class="btn btn2">Nous contacter</button>
+                <a href="../html/index2.html">
+
+                    <button class="btn btn1">Nos services</button>
+                </a>
+                <a href="../html/index3.html">
+
+                    <button class="btn btn2">Nous contacter</button>
+                </a>
             </div>
             <img src="../img/robot.png" alt="Robot illustration" class="mainImg">
         </section>
