--- a/html/index2.html
+++ b/html/index2.html
@@ -28,7 +28,10 @@
                 solutions IT et télécoms.
                 Nos services sont conçus pour garantir performance,
                 sécurité et continuité des activités</h2>
-             <button class="btn btn2">Nous contacter</button>
+             <a href="../html/index3.html">
+
+                    <button class="btn btn2">Nous contacter</button>
+             </a>
         </div>
         <section class="container">
             <div class="cont">
@@ -182,8 +185,14 @@
                 <h1>dit de votre entreprise</h1>
             </div>
             <div class="attirer-buttons">
-                <button class="btn btn1">Nos services</button>
-                <button class="btn btn2">Nous contacter</button>
+                <a href="../html/index2.html">
+                    
+                    <button class="btn btn1">Nos services</button>
+                </a>
+                <a href="../html/index3.html">
+
+                    <button class="btn btn2">Nous contacter</button>
+                </a>
             </div>
         </section>
     </main>
