--- a/html/index4.html
+++ b/html/index4.html
@@ -25,7 +25,12 @@
         <section class="hero-section">
             <div class="hero-content">
                 <h1 class="hero-title">Nos Réalisations</h1>
-                <p class="hero-subtitle">Découvrez comment Be Loyal IT accompagne les entreprises dans leurs projets technologiques grâce à des solutions fiables et innovantes.</p>
+                <p class="hero-subtitle">Découvrez comment Be Loyal IT accompagne les entreprises dans leurs projets
+                    technologiques grâce à des solutions fiables et innovantes.</p>
+                    <br>
+                <a href="../html/index3.html">
+                    <button class="btn btn2">Nous contacter</button>
+                </a>
             </div>
         </section>
 
@@ -39,7 +44,8 @@
                     <div class="project-content">
                         <span class="project-category">Infrastructure & Réseau</span>
                         <h2>Déploiement réseau sécurisé pour PME</h2>
-                        <p class="project-description">Mise en place d'une infrastructure réseau sécurisée pour une petite entreprise locale.</p>
+                        <p class="project-description">Mise en place d'une infrastructure réseau sécurisée pour une
+                            petite entreprise locale.</p>
                         <div class="project-result">
                             <h3>Résultat</h3>
                             <ul>
@@ -59,7 +65,8 @@
                     <div class="project-content">
                         <span class="project-category">Téléphonie</span>
                         <h2>Installation PABX / IPBX pour société commerciale</h2>
-                        <p class="project-description">Déploiement d'un système de téléphonie professionnelle pour centraliser les appels.</p>
+                        <p class="project-description">Déploiement d'un système de téléphonie professionnelle pour
+                            centraliser les appels.</p>
                         <div class="project-result">
                             <h3>Résultat</h3>
                             <ul>
@@ -78,7 +85,8 @@
                     <div class="project-content">
                         <span class="project-category">Stockage & Sauvegarde</span>
                         <h2>Solution de sauvegarde et stockage</h2>
-                        <p class="project-description">Installation de serveurs et solutions de backup pour entreprise informatique.</p>
+                        <p class="project-description">Installation de serveurs et solutions de backup pour entreprise
+                            informatique.</p>
                         <div class="project-result">
                             <h3>Résultat</h3>
                             <ul>
@@ -97,7 +105,8 @@
                     <div class="project-content">
                         <span class="project-category">Événementiel & Audiovisuel</span>
                         <h2>Organisation d'événement professionnel avec diffusion live</h2>
-                        <p class="project-description">Mise en place de solutions audiovisuelles et streaming pour un événement local.</p>
+                        <p class="project-description">Mise en place de solutions audiovisuelles et streaming pour un
+                            événement local.</p>
                         <div class="project-result">
                             <h3>Résultat</h3>
                             <ul>
@@ -115,7 +124,8 @@
             <div class="testimonial-container">
                 <div class="testimonial-icon">💬</div>
                 <blockquote class="testimonial-text">
-                    "Grâce à Be Loyal IT, notre réseau fonctionne sans interruption et nos communications sont optimisées. L'équipe est réactive et professionnelle."
+                    "Grâce à Be Loyal IT, notre réseau fonctionne sans interruption et nos communications sont
+                    optimisées. L'équipe est réactive et professionnelle."
                 </blockquote>
                 <div class="testimonial-author">
                     <strong>Directeur IT</strong>
@@ -129,7 +139,7 @@
                 <h2>Vous voulez donner vie à vos projets IT ?</h2>
                 <p>Contactez-nous dès aujourd'hui pour discuter de votre solution sur mesure !</p>
                 <div class="cta-buttons">
-                    <a href="./index4.html" class="btn btn1">Nous contacter</a>
+                    <a href="./index3.html" class="btn btn1">Nous contacter</a>
                     <a href="./index2.html" class="btn btn2">Découvrir nos services</a>
                 </div>
             </div>
