--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,10 @@
             <div class="service-info">
                 <h2>Des services adaptés aux besoins des entreprises modernes</h2>
                 <p>Nous proposons des services IT et télécoms conçus pour répondre aux besoins des entreprises.</p>
-                <button class="btn btn-primary">En savoir plus</button>
+                <a href="../html/index2.html">
+                    <button class="btn btn-primary">En savoir plus</button>
+                </a>
+                    
             </div>
         </section>
     </main>
