--- a/html/index2.html
+++ b/html/index2.html
@@ -189,7 +189,7 @@
                     
                     <button class="btn btn1">Nos services</button>
                 </a>
-                <a href="../html/index3.html">
+                <a href="../html/index3.htmlx">
 
                     <button class="btn btn2">Nous contacter</button>
                 </a>
